<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="4dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/custom_post_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_post_tv_date"
        android:layout_centerHorizontal="true"
        app:columnCount="3"
        app:rowCount="4">


        <ImageView
            android:id="@+id/custom_post_img_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            app:layout_columnWeight="1"
            app:layout_rowSpan="3"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/_9723968_126296761695183_693796552414893385_n" />

        <TextView
            android:id="@+id/custom_post_tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_people_24"
            android:drawablePadding="8dp"
            android:text="@string/custom_post_following"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_following_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_post_add_24"
            android:drawableLeft="@drawable/ic_baseline_post_add_24"
            android:drawablePadding="8dp"
            android:text="@string/custom_post_posts"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_posts_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_people_alt_24"
            android:drawableLeft="@drawable/ic_baseline_people_24"
            android:drawablePadding="8dp"
            android:text="@string/custom_post_followers"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_followers_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/custom_post_btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FOLLOW"
            android:textStyle="bold"
            android:typeface="serif"
            app:backgroundTint="#1231DD"
            app:layout_columnWeight="1"

            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/custom_post_tv_name"
            android:layout_width="106dp"
            android:layout_height="41dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:padding="4dp"
            android:text=" "
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_gravity="center" />






    </androidx.gridlayout.widget.GridLayout>


    <TextView
        android:id="@+id/custom_post_tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="#1B2977"
        android:gravity="center"
        android:padding="12dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="69dp"
        android:layout_below="@id/custom_post_tv_body"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/custom_post_btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_favorite_24"
            android:text="@string/custom_post_like"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="serif"
            app:backgroundTint="#CAC9C9" />

        <Button
            android:id="@+id/custom_post_btn_like2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_share_24"
            android:text="@string/custom_post_share"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="serif"
            app:backgroundTint="#CAC9C9" />

        <Button
            android:id="@+id/custom_post_btn_like3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_comment_24"
            android:text="@string/custom_post_comment"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="serif"
            app:backgroundTint="#CAC9C9" />
    </LinearLayout>

</RelativeLayout>