<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".AddPostActivity">

    <EditText
        android:id="@+id/add_post_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="NAME"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/add_post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="BODY"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/add_post_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="DATE"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/add_post_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_post_followers"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/add_post_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_post_posts"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/add_post_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/custom_post_following"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn_post_add"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:text="ADD"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:backgroundTint="#1B2977" />

</LinearLayout>